samples/_failures_safe/1761415885_c77692_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54e012e3.c: In function ‘main’:
./samples/SAFE/__tmp_54e012e3.c:153:38: error: expected ‘;’ at end of input
  153 |     transitions_stack[3].to_state = 0
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_54e012e3.c:153:5: error: expected declaration or statement at end of input
  153 |     transitions_stack[3].to_state = 0
      |     ^~~~~~~~~~~~~~~~~
